--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 Allo
+<script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyA6wTnm5xwu0M5luMYXYJlot3tdKOmxUi0",
+    authDomain: "mathglicko.firebaseapp.com",
+    databaseURL: "https://mathglicko.firebaseio.com",
+    projectId: "mathglicko",
+    storageBucket: "mathglicko.appspot.com",
+    messagingSenderId: "896940501964"
+  };
+  firebase.initializeApp(config);
+</script>
